--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
                 <a class="search-icon d-none d-md-block" href="#"><i class="fa fa-search"></i></a>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#">INICIO</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">PRESUPUESTOS</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">IMAGENES</a></li>
+                        <li class="nav-item"><a class="nav-link"  href="#inicio">INICIO</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#pres">PRESUPUESTOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#img">IMAGENES</a></li>
                 </div>
             </nav>
         </div>
     </header>
     <!-- Header End -->
     <!-- Hero Start -->
-    <section class="hero">
+    <section class="hero" >
         <div class="container">
             <div class="row">
                 <div class="col-12 offset-md-1 col-md-11">
@@ -91,7 +91,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide slide-content d-flex align-items-center">
-                                <div class="single-slide">
+                                <div class="single-slide" id="inicio">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Envios a Necochea<br>  y Tres Arroyos
                                     </h1>
                                     <p data-aos="fade-right" data-aos-delay="600">Ofrecemos servicio de envios <br> hacia ambas ciudades.
@@ -110,11 +110,11 @@
             <span class="arr-right"><i class="fa fa-angle-right"></i></span>
         </div>
         <div class="texture"></div>
-        <div class="diag-bg"></div>
+        <div class="diag-bg" ></div>
     </section>
     <!-- Hero End -->
     <!-- Call To Action Start -->
-    <section class="cta" data-aos="fade-up" data-aos-delay="0">
+    <section class="cta" data-aos="fade-up" data-aos-delay="0" id="pres">
         <div class="container">
             <div class="cta-content d-xl-flex align-items-center justify-content-around text-center text-xl-left">
                 <div class="content" data-aos="fade-right" data-aos-delay="200">
@@ -130,7 +130,7 @@
     <!-- Call To Action End -->
    
     <!-- Recent Posts Start -->
-    <section class="recent-posts">
+    <section class="recent-posts" id="img">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
