--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                             </div>
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide" id="inicio">
-                                    <h1 data-aos="fade-right" data-aos-delay="200">Envios a Necochea<br>  y Tres Arroyos
+                                    <h1 data-aos="fade-right" data-aos-delay="200">Envios a todas<br>  las ciudades
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">Ofrecemos servicio de envios <br> hacia ambas ciudades.
+                                    <p data-aos="fade-right" data-aos-delay="600">Ofrecemos servicio de envíos, <br> consulte por su ciudad.
                                     </p>
                                     <a data-aos="fade-right" data-aos-delay="900" href="tel:2262590080" class="btn btn-primary"> <i class="fa fa-phone" aria-hidden="true"></i> Llamar</a>
                                     <a data-aos="fade-right" data-aos-delay="900" href="https://api.whatsapp.com/send?phone=+5492262590080&text=Hola%20Atermicos%20Necochea!%20" class="btn btn-primary"> <i class="fa fa-whatsapp" aria-hidden="true"></i> Whatsapp</a>
